# Progetto

./: BankAccount.cpp  BankAccount.h  CMakeLists.txt  Transaction.cpp  Transaction.h  Transaction_in.cpp  Transaction_in.h  Transaction_out.cpp  Transaction_out.h  file.txt  main.cpp
test/: BankAccountTest.cpp  CMakeLists.txt  TransactionTest.cpp  runAllTests.cpp
test/lib/: CMakeLists.txt  TransactionTest.cpp
